# optimsoc

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  COPYING  Dockerfile  INSTALL  Jenkinsfile  LICENSE  Makefile  Makefile.am  Makefrag  README.installed  README.md  autogen.sh  build.sbt  configure.ac  dma.core  doxygen.am  install-build-deps.sh  libglip.pc.in  lisnoc16.core  lisnoc16_converter.core  mesh3x3.core  opensocdebug.pc.in  requirement_versions.yml  router.core  source.sh  update_externals.sh
src/bindings/python/: Makefile.am  opensocdebug.i  osd_python.c  osd_python.h
src/bindings/python/examples/: runelf.py
src/bindings/python/module/: session.py
src/host/liboptimsochost/: .gitignore  README  autogen.sh  configure.ac
src/host/liboptimsochost/src/: Makefile.am  backend_dbgnoc.c  backend_simtcp.c  backend_simtcp.h  log.c  log.h
src/host/liboptimsochost/src/optimsochost/: liboptimsochost.h
src/host/liboptimsochost/src/tools/: .gitignore  optimsoc_cli.c
src/host/optimsocgui/: CMakeLists.txt  LICENSE  LICENSE.MIT  README
src/host/optimsocgui/cmake/: FindLiboptimsochost.cmake  FindLibqwt.cmake
src/host/optimsocgui/events.d/: baremetal.ini  runtime.ini
src/host/optimsocgui/src/: CMakeLists.txt  aboutdialog.cpp  connectionview.ui  executionchart.cpp  executionchart.ui  executionchartcreators.cpp  executionchartcreators.h  executionchartelements.cpp  executionchartplots.cpp  executionchartplots.h  logwidget.cpp  logwidget.ui  mainwindow.ui  memoryinteractionwidget.cpp  memoryinteractionwidget.h  memorytablemodel.cpp  memorytablemodel.h  meshnoc.cpp  meshnoc.h  meshnoclayout.cpp  meshnoclayout.h  noc.cpp  noc.h  noclayout.cpp  noclayout.h  nocrouter.cpp  nocrouter.h  optimsoccomponent.cpp  optimsoccomponent.h  optimsocsystemelement.h  optimsocsystemfactory.cpp  optimsocsystemfactory.h  optimsocsystemmodel.cpp  optimsocsystemmodel.h  plotspectrogram.cpp  plotspectrogram.ui  softwareexecutionview.cpp  systeminterface.cpp  systeminterface.h  systeminterfaceworker.cpp  (+6 more)
src/host/sim/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  optimsoc-sim.pc.in
src/host/sim/build-aux/: .gitignore
src/host/sim/src/: Makefile.am  OptionsParser.cpp  OptionsParser.h  VerilatedControl.cpp  VerilatedControl.h  VerilatedToplevel.h
src/host/sim/src/share/: Makefile.verilator.inc
src/soc/sw/baremetal-libs/: README.md  autogen.sh  configure.ac
src/soc/sw/baremetal-libs/build-aux/: .gitignore  config.sub
src/soc/sw/os/gzll-kernel/: .gitignore  Makefile.am  README.md  configure
src/sw/host/liboptimsochost/: .gitignore  LICENSE  Makefile.am  README  autogen.sh  configure  configure.ac  liboptimsochost.pc.in
src/sw/host/liboptimsochost/doc/: .gitignore  Makefile.am  doxygen.cfg.in
src/sw/host/liboptimsochost/examples/: Makefile.am  optimsoc_cli.c  optimsoc_reset.c
src/sw/host/liboptimsochost/src/: .gitignore  Makefile.am  backend_dbgnoc.c  backend_dbgnoc.h  backend_dbgnoc_tcp.c  backend_dbgnoc_tcp.h  backend_dbgnoc_usb.c  backend_dbgnoc_usb.h  backend_simtcp.c  backend_simtcp.h  backends.h  liboptimsochost-private.h  liboptimsochost.c  log.c  log.h
src/sw/host/optimsocgui/: .gitignore  CMakeLists.txt  README
src/sw/host/optimsocgui/cmake/: FindLiboptimsochost.cmake
src/sw/host/optimsocgui/doc/: doxygen.cfg.in
src/sw/host/optimsocgui/events.d/: baremetal  baremetal.ini  runtime  runtime.ini
src/sw/host/optimsocgui/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  componentitem.cpp  componentitem.h  computetile.cpp  computetile.h  computetileitem.cpp  computetileitem.h  configuredialog.cpp  configuredialog.h  configuredialog.ui  connectionview.cpp  connectionview.h  executionchart.cpp  executionchart.h  executionchart.ui  executionchartcreators.cpp  executionchartcreators.h  executionchartelements.cpp  executionchartelements.h  executionchartevents.cpp  executionchartevents.h  executionchartplots.cpp  executionchartplots.h  externaltile.cpp  externaltile.h  externaltileitem.cpp  externaltileitem.h  hardwareinterface.cpp  hardwareinterface.h  hexspinbox.cpp  hexspinbox.h  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  (+53 more)
src/sw/system/: .gitignore  autogen.sh  configure  configure.ac
src/sw/system/apps/baremetal/: .gitignore  README.md
src/sw/system/apps/gzll/: .gitignore  README.md
src/sw/system/baremetal-libs/: .gitignore  autogen.sh  configure.ac
src/sw/system/bootrom/: README
src/sw/system/dm/: .gitignore  Makefile.am  autogen.sh  configure.ac
src/sw/system/dm/bootrom/: .gitignore  Makefile  bin2vlogarray  bin2vlogarray.c  boot.s  bootrom_code.v.header
src/sw/system/dm/doc/: Doxyfile
src/sw/system/dm/libmca-bare/: ChangeLog  Makefile  Makefile.inc  README  mca_config.h  mca_config.h.in
src/sw/system/dm/src/: Makefile.am
src/sw/system/gzll-kernel/: .gitignore  Makefile.am  autogen.sh  configure  configure.ac
src/sw/system/gzll-kernel/include/: gzll-apps.h  gzll-syscall.h
src/sw/system/gzll-kernel/includes/: gzll-syscall.h
src/sw/system/gzll-libs/: .gitignore  Makefile.am  autogen.sh  configure  configure.ac
src/sw/system/src/: Makefile.am
src/sysc/: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac
src/sysc/TraceMonitor/: TraceMonitor.cpp  TraceMonitor.h  traceevents.h
src/sysc/doc/: Doxyfile
src/sysc/src/: Makefile.am
src/sysc/src/debug/: DebugConnector.cpp  DebugConnector.h  DebugModule.h  FX2EmulationDebugConnector.cpp  FX2EmulationDebugConnector.h  TracePacket.cpp  TracePacket.h  VerilatedDebugConnector.cpp  VerilatedDebugConnector.h  VerilatedSTM.cpp  VerilatedSTM.h
src/sysc/src/share/: optimsoc-sysc.pc.in
src/sysc/src/util/: OptionsParser.cpp  OptionsParser.h
src/tools/: Makefile.am  cli-util.h  io_stress_test.c  loopback_measure.c
src/tools/cli/: cli.c  help_strings.h  memory_test.c  terminal.h
src/tools/daemon/: Makefile.am  daemon.c  daemon.h  handler.c
src/tools/osd-host-controller/: Makefile.am  osd-host-controller.c
src/tools/osd-target-run/: Makefile.am  osd-target-run.c
src/tools/share/: osd.conf
(+1831 files in other folders)
